--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
