--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.5.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.20",
+    "@react-navigation/stack": "^7.4.1",
     "axios": "^1.9.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.0",
+    "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0"
   },
